feat: 新增歌词调整 songloft-org/songloft#49
